# python-template-backend

./: .dockerignore  .editorconfig  .env.example  .pre-commit-config.yaml  Makefile  alembic.ini  compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
docker/dev/: Dockerfile  compose.yml
docker/prod/: Dockerfile
migrations/: env.py
migrations/versions/: 024a8465a709_init.py
src/app/: config.py  exception.py  main.py  security.py
src/app/database/: __init__.py  base.py  session.py
src/app/exceptions/: user_exception.py
src/app/middlewares/: response_middleware.py
src/app/models/: __init__.py  base.py  user.py
src/app/repository/: user_repository.py
src/app/repository/user/: __init__.py  user_repository.py  user_repository_interface.py
src/app/routers/: auth_router.py  deps.py  user_router.py
src/app/schemas/: response.py
src/app/schemas/user/: base.py  user_input_create.py  user_login_input.py
src/app/services/: auth_service.py  user_service.py
src/app/services/auth/: __init__.py  auth_service.py  auth_service_interface.py
src/app/services/user/: __init__.py  user_service.py  user_service_interface.py
src/app/utils/: response_handler.py
